@@ -30,6 +30,7 @@ import io.opentelemetry.instrumentation.annotations.SpanAttribute;
 import io.opentelemetry.instrumentation.annotations.WithSpan;
 import java.io.File;
 import java.io.IOException;
+import java.net.URI;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
@@ -773,7 +774,7 @@ public class ClientsExecutor {
 		try {
 			String urlSpec = String.format("%s://%s:%d", wbemConfig.getProtocol().toString(), hostname, wbemConfig.getPort());
 
-			final URL url = new URL(urlSpec);
+			final URL url = new URI(urlSpec).toURL();
 
 			trace(() ->
 				log.trace(
